# CLI-Anything-API

cli-anything-plugin/universal-toolgen/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  INSTALL.md  MCP_USAGE.md  README.md  RESEARCH.md  pyproject.toml
cli-anything-plugin/universal-toolgen/cli_anything/: __init__.py
cli-anything-plugin/universal-toolgen/cli_anything/universal/: __init__.py  api_parser.py  command_generator.py  main.py  mcp_generator.py  runtime_executor.py  schema.py  tool_index.py
cli-anything-plugin/universal-toolgen/examples/: sample_openapi.yaml
cli-anything-plugin/universal-toolgen/tests/: test_api_parser.py  test_main.py  test_mcp_generator.py  test_runtime_executor.py  test_schema.py  test_tool_index.py
